--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <article class="officersContainer"></article>
 
+        <article class="noteFormContainer"></article>
         <article class="criminalsContainer"></article>
     </main>
 
