--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <article class="officersContainer"></article>
 
         <article id="noteFormContainer"></article>
-        <div id="noteListContainer"></div>
-
-
-        <article id="criminalsContainer"></article>
     </main>
+
+    <section class="criminals-body">
+        <article id="criminalsContainer"></article>
+        <aside id="noteListContainer"></aside>
+    </section>
 
     <script type="module" src="./scripts/main.js"></script>
 </body>
