--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <main class="container">
         <header>
+            <div class="page-title">
+                <img src="/imgs/glassdaleBadge.png" alt="Glassdale PD Badge">
+                <h1>Glassdale Police Department</h1>
+            </div>
             <div class="filters">
                 <div class="filter filters__crime"></div>
                 <div class="filter filters__incarceration"></div>
@@ -20,13 +24,14 @@
         </header>
 
         <article class="officersContainer"></article>
-
-        <article id="noteFormContainer"></article>
     </main>
 
     <section class="criminals-body">
         <article id="criminalsContainer"></article>
-        <aside id="noteListContainer"></aside>
+        <aside>
+            <article id="noteFormContainer"></article>
+            <div id="noteListContainer"></div>
+        </aside>
     </section>
 
     <script type="module" src="./scripts/main.js"></script>
