--- a/index.html
+++ b/index.html
@@ -9,37 +9,40 @@
 </head>
 
 <body>
+    <div class="container">
 
-    <main class="container">
+        <main>
 
-        <header>
+            <header>
 
-            <div class="page-title">
-                <img src="/imgs/glassdaleBadge.png" alt="Glassdale PD Badge">
-                <h1>Glassdale Police Department</h1>
-            </div>
+                <div class="page-title">
+                    <img src="/imgs/glassdaleBadge.png" alt="Glassdale PD Badge">
+                    <h1>Glassdale Police Department</h1>
+                </div>
 
-            <div class="filters">
-                <div class="filter filters__crime"></div>
-                <div class="filter filters__incarceration"></div>
-                <div class="filter filters__officer"></div>
-            </div>
+                <div class="filters">
+                    <div class="filter filters__crime"></div>
+                    <div class="filter filters__incarceration"></div>
+                    <div class="filter filters__officer"></div>
+                </div>
 
-        </header>
+            </header>
 
-        <article class="officersContainer"></article>
-    </main>
+            <article class="officersContainer"></article>
+        </main>
 
-    <section class="criminals-body">
+        <section class="criminals-body">
 
-        <article id="criminalsContainer"></article>
+            <article id="criminalsContainer"></article>
 
-        <aside>
-            <div id="noteFormContainer"></div>
-            <div id="noteListContainer"></div>
-        </aside>
+            <aside>
+                <div id="noteFormContainer"></div>
+                <div id="noteListContainer"></div>
+            </aside>
 
-    </section>
+        </section>
+
+    </div>
 
     <script type="module" src="./scripts/main.js"></script>
 </body>
