--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="filter filters__crime"></div>
                     <div class="filter filters__incarceration"></div>
                     <div class="filter filters__officer"></div>
-                    <button id="witnessCriminalsSwitch">Witness Statements</button>
+                    <div class="witnessCriminals"></div>
                 </div>
 
             </header>
